Offering to recover from backup if index corrupted

If index.xml is corrupted we check if a backup exists. Then we ask the
user if he would like to use the backup.

BUG: 295178