Utilities/Util.h
@@ -36,7 +36,7 @@ namespace DB
 namespace Utilities
 {
 QString createInfoText( DB::ImageInfoPtr info, QMap<int, QPair<QString,QString> >* );
-void checkForBackupFile( const QString& fileName );
+void checkForBackupFile( const QString& fileName, const QString& message = QString() );
 bool ctrlKeyDown();
 bool copy( const QString& from, const QString& to );
 void copyList( const QStringList& from, const QString& directoryTo );
